--- a/docs/spec/components/schemas/BlobKey.yaml
+++ b/docs/spec/components/schemas/BlobKey.yaml
@@ -1,9 +1,11 @@
 type: object
+required:
+  - id
+  - type
 properties:
   id:
     type: string
-    example: "1"
   type:
     type: string
     enum:
-      - component
+      - blob
