--- a/docs/spec/components/schemas/Blob.yaml
+++ b/docs/spec/components/schemas/Blob.yaml
@@ -7,11 +7,15 @@ allOf:
     properties:
       attributes:
         type: object
+        required: 
+          - title
         properties:
           title:
             type: string
       relationships:
         type: object
+        required:
+          - author
         properties:
           author:
             $ref: '#/components/schemas/Relation'
