--- a/docs/spec/paths/blob@{id}.yaml
+++ b/docs/spec/paths/blob@{id}.yaml
@@ -26,6 +26,12 @@ get:
       content:
         application/vnd.api+json:
           schema:
+            $ref: '#/components/schemas/Errors'    
+    '500':
+      description: internal server error
+      content:
+        application/vnd.api+json:
+          schema:
             $ref: '#/components/schemas/Errors'
 delete:
   tags:
