--- a/docs/spec/components/schemas/Blob.yaml
+++ b/docs/spec/components/schemas/Blob.yaml
@@ -18,4 +18,7 @@ allOf:
           - author
         properties:
           author:
-            $ref: '#/components/schemas/AuthorKey'
+            type: object
+            properties:
+              data:
+                author_key: 1
