--- a/docs/spec/paths/blob.yaml
+++ b/docs/spec/paths/blob.yaml
@@ -22,12 +22,6 @@ post:
         application/vnd.api+json:
           schema:
             $ref: '#/components/schemas/Errors'
-    '422':
-      description: failed blob adding to database
-      content:
-        application/vnd.api+json:
-          schema:
-            $ref: '#/components/schemas/Errors'
     '500':
       description: failed to generate blob
       content:
@@ -79,8 +73,8 @@ get:
                 type: array
                 items:
                   $ref: '#/components/schemas/Blob'
-    '422':
-      description: failed to get from database
+    '400':
+      description: bad request
       content:
         application/vnd.api+json:
           schema:
